--- a/Klike/Sources/Controllers/Event/KLPaymentBaseViewController.xib
+++ b/Klike/Sources/Controllers/Event/KLPaymentBaseViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLPaymentBaseViewController">
             <connections>
+                <outlet property="_activity" destination="sK6-2c-xch" id="KLz-ko-9Yc"/>
                 <outlet property="_button" destination="hAL-Rj-Wzr" id="hD6-OO-afg"/>
                 <outlet property="_constraintBottom" destination="nIK-9h-Ago" id="DS7-Jq-MKS"/>
                 <outlet property="_imageBackground" destination="9gH-KE-M5v" id="qzr-gV-h6S"/>
@@ -14,6 +15,7 @@
                 <outlet property="_labelAmount" destination="tIS-uZ-3bA" id="gZd-8u-8aO"/>
                 <outlet property="_labelAmountDescription" destination="Sq5-G3-HEF" id="jTk-9C-bA8"/>
                 <outlet property="_labelHeader" destination="Cle-l0-EIP" id="OVd-rv-pja"/>
+                <outlet property="_viewBlock" destination="970-Me-7ju" id="aTg-Us-amo"/>
                 <outlet property="_viewCard" destination="SXd-rZ-MvN" id="kzv-31-6MH"/>
                 <outlet property="_viewInputConyeny" destination="14g-GE-GHh" id="5Z1-sM-UJ7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -149,7 +151,16 @@
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="970-Me-7ju">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <subviews>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="sK6-2c-xch">
+                            <rect key="frame" x="290" y="290" width="20" height="20"/>
+                        </activityIndicatorView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerY" secondItem="sK6-2c-xch" secondAttribute="centerY" id="92d-Yk-1pe"/>
+                        <constraint firstAttribute="centerX" secondItem="sK6-2c-xch" secondAttribute="centerX" id="LFY-dx-bHw"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
