--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -68,7 +68,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="6TG-Dd-Djo" secondAttribute="trailing" id="3GK-FG-OgP"/>
-                            <constraint firstAttribute="height" constant="230" id="4jt-ep-Ucz"/>
+                            <constraint firstAttribute="height" priority="999" constant="230" id="4jt-ep-Ucz"/>
                             <constraint firstItem="Z3k-fh-DL0" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="A0o-TZ-jlj"/>
                             <constraint firstItem="6TG-Dd-Djo" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="CZ2-WQ-97p"/>
                             <constraint firstAttribute="trailing" secondItem="MrK-y4-mGC" secondAttribute="trailing" id="Fvx-Y6-4we"/>
